--- a/index.html
+++ b/index.html
@@ -1,100 +1,56 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
+  <head>
+    <meta charset="utf-8">
+    <title>Jeremie Joseph</title>
+    <link rel="stylesheet" href="css/styles.css">
+    <link href="https://fonts.googleapis.com/css?family=Merriweather|Montserrat|Sacramento&display=swap" rel="stylesheet">
+    <link rel="icon" href="images/so_j.png">
+  </head>
 
-<head>
-  <meta charset="utf-8">
-  <title>Jeremie's Personal Site</title>
-</head>
+  <body>
+<div class="top-container">
+  <img class="top-cloud" src="images/cloud.png" alt="cloud-img">
+  <h1>I'm Jeremie.</h1>
+  <p>a <span class="pro">pro</span>grammer.</p>
+  <img class="bottom-cloud" src="images/cloud.png" alt="cloud-img">
+  <img src="images/mountain.png" alt="mountain-img">
+</div>
+<div class="middle-container">
+  <div class="profile">
+    <img class="face-img" src="images/my_photolab.jpg" alt="my-photolab-img">
+    <h2>Hello.</h2>
+    <p class="intro">I am an Illustrator and Web Developer. I ❤️ art, nature, and fitness.</p>
+  </div>
+  <hr>
+  <div class="skills">
+    <h2>My Skills</h2>
+    <div class="skill-row">
+      <img class="draw-img" src="images/red-within-us.jpg" alt="red-within-us-stephanie-lavaud">
+      <h3>Design and Development</h3>
+      <p>I started learning to draw to capture the beauty I feel in me and see around me. By age 14, my work has been represented in mediums from a Florida elementary school to a Warner Bros and DC Comics collaborated animated TV series. Over time, I have gained a wealth of experience designing and developing art to be showcased in as many mediums our intricate planet earth can allow.</p>
+    </div>
+    <div class="skill-row">
+      <img class="learning-img" src="images/spider-man_learning.jpeg" alt="spider-man-reading-and-learning-img-raj">
+      <h3>School of Life</h3>
+      <p>And yet, my favorite skill is learning. I have been nicknamed human-encyclopedia, professor, and War Machine from Iron Man due to my childlike delights of acquiring knowledge, articulating it, and advocating persistence, respectively. </p>
+    </div>
+  </div>
+  <hr>
+  <div class="contact-me">
+    <h2>Get In Touch</h2>
+    <h3>If you love art, exploration, and knowledge as much as I do.</h3>
+    <p class="contact-msg">Love art, exploration, and knowledge like me? Let's talk about how awesome they are! We can code while we share bits of art, explorations, and knowledge!</p>
+    <a class="btn" href="getexcellentwork@gmail.com">CONTACT ME</a>
+  </div>
+</div>
 
-<body>
-  <table cellspacing="10">
-    <tr>
-      <td><img src="images/2018 Portrait.jpg" alt="Jeremie Joseph profile picture"></im>
-      </td>
-      <td>
-        <h1>Jeremie Joseph</h1>
-        <p><em>Founder and CEO of Iskra.</em></p>
-        <p>I'm an illustrator and web developer. I love movies, art, and nature.</p>
-      </td>
-    </tr>
-  </table>
-  <hr>
-  <h3>Education</h3>
-  <ul>
-    <li>The Complete Web Development Bootcamp, 2020</li>
-    <li><a href="https://www.coursera.org/account/accomplishments/verify/V2VZDY33HWQP">Google IT Support Professional Certificate, 2020</a></li>
-  </ul>
-  <hr>
-  <h3>Work Experience</h3>
-  <table cellspacing="10">
-    <thead>
-      <tr>
-        <th>Dates</th>
-        <th>Work</th>
-      </tr>
-    </thead>
-    <tbody>
-      <tr>
-        <td>
-          Date or Date-Date
-        </td>
-        <td>Accomplishment</td>
-      </tr>
-      <tr>
-        <td>Date or Date-Date</td>
-        <td>Accomplishment</td>
-      </tr>
-    </tbody>
-    <tfoot>
 
-    </tfoot>
-  </table>
-  <hr>
-  <h3>Skills</h3>
-  <table cellspacing="10">
-    <tr>
-      <td>Web Development</td>
-      <td>⭐️⭐️⭐️⭐️⭐️</td>
-    </tr>
-    <tr>
-      <td>IT Support</td>
-      <td>⭐️⭐️⭐️⭐️⭐️</td>
-    </tr>
-    <tr>
-      <td>iOS Development</td>
-      <td>⭐️⭐️⭐️⭐️⭐️</td>
-    </tr>
-    <tr>
-      <td>Android Development</td>
-      <td>⭐️⭐️⭐️⭐️⭐️</td>
-    </tr>
-    <tr>
-      <td>Illustration</td>
-      <td>⭐️⭐️⭐️⭐️⭐️</td>
-    </tr>
-    <tr>
-      <td>Cinemagraphy</td>
-      <td>⭐️⭐️⭐️</td>
-    </tr>
-    <tr>
-      <td>Videography</td>
-      <td>⭐️⭐️⭐️</td>
-    </tr>
-    <tr>
-      <td>Photography</td>
-      <td>⭐️⭐️⭐️</td>
-    </tr>
-  </table>
-  <hr>
-  <h3>My Hobbies</h3>
-  <ol>
-    <li><a href="images/Joyful Meetup 3.png">Illustration</a></li>
-    <li>Filmmaking</li>
-    <li>Biology</li>
-    <li>Neuroscience</li>
-  </ol>
-  <hr>
-  <a href="contact-me.html">Contact Me</a>
-</body>
+<div class="bottom-container">
+  <a class="footer-link" href="https://www.linkedin.com/in/jeremie-joseph-7855a91a2" target="_blank">LinkedIn</a>
+  <a class="footer-link" href="https://www.positivetaste.org/" target="_blank">Website</a>
+  <p class="copyright">© 2020 Jeremie Joseph</p>
+</div>
 
+  </body>
 </html>
