--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <div class="profile">
     <img class="face-img" src="images/my_photolab.jpg" alt="my-photolab-img">
     <h2>Hello.</h2>
-    <p class="intro">I am an Illustrator and Web Developer. I ❤️ art, nature, and fitness.</p>
+    <p class="intro">I am an Illustrator and Web Developer. I ❤️ art, nature, fitness and technology.</p>
   </div>
   <hr>
   <div class="skills">
