--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <div class="skill-row">
       <img class="learning-img" src="images/spider-man_learning.jpeg" alt="spider-man-reading-and-learning-img-raj">
       <h3>School of Life</h3>
-      <p>And yet, my favorite skill is learning. I have been nicknamed human-encyclopedia, professor, and War Machine from Iron Man due to my childlike delights of acquiring knowledge, articulating it, and advocating persistence, respectively. </p>
+      <p>And yet, my favorite skill is learning. I have been nicknamed human-encyclopedia, professor, and War Machine from Iron Man due to my childlike delights of acquiring knowledge, sharing it, and advocating quality persistence, respectively. </p>
     </div>
   </div>
   <hr>
