--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     <h2>Get In Touch</h2>
     <h3>If you love art, exploration, and knowledge as much as I do.</h3>
     <p class="contact-msg">Love art, exploration, and knowledge like me? Let's talk about how awesome they are! We can code while we share bits of art, explorations, and knowledge!</p>
-    <a class="btn" href="mailto:getexcellentwork@gmail.com">CONTACT ME</a>
+    <a class="btn" href="mailto:jeremiejoseph@positivetaste.org">CONTACT ME</a>
   </div>
 </div>
 
