--- a/index.html
+++ b/index.html
@@ -33,13 +33,13 @@
     <div class="skill-row">
       <img class="learning-img" src="images/spider-man_learning.jpeg" alt="spider-man-reading-and-learning-img-raj">
       <h3>School of Life</h3>
-      <p>But my best skill is learning. I have been nicknamed human-encyclopedia, professor, and War Machine from Iron Man due to my childlike delights of acquiring knowledge, sharing it, and advocating quality persistence, respectively. </p>
+      <p>My best skill is learning. I have been nicknamed human-encyclopedia, professor, and War Machine from Iron Man due to my childlike delights of acquiring knowledge, sharing it, and advocating quality persistence, respectively. </p>
     </div>
   </div>
   <hr>
   <div class="contact-me">
     <h2>Get In Touch</h2>
-    <h3>If you love art, exploration, and knowledge as much as I do.</h3>
+    <h3 id="love">If you love art, exploration, and knowledge as much as I do.</h3>
     <p class="contact-msg">Love art, exploration, and knowledge like me? Let's talk about how awesome they are! We can code while we share bits of art, explorations, and knowledge!</p>
     <a class="btn" href="mailto:jeremiejoseph@positivetaste.org">CONTACT ME</a>
   </div>
