--- a/index.html
+++ b/index.html
@@ -28,12 +28,12 @@
     <div class="skill-row">
       <img class="draw-img" src="images/red-within-us.jpg" alt="red-within-us-stephanie-lavaud">
       <h3>Design and Development</h3>
-      <p>I started learning to draw to capture the beauty I feel in me and see around me. By age 14, my work has been represented in mediums from a Florida elementary school to a Warner Bros and DC Comics collaborated animated TV series. Over time, I have gained a wealth of experience designing and developing art to be showcased in as many mediums our intricate planet earth can allow.</p>
+      <p class="knack">I started learning to draw to help capture the beauty I feel and see. By age 14, my work has been represented in mediums including a Florida elementary school to a Warner Bros. and DC Comics collaborated animated TV series. Over time, I have gained a wealth of experience designing and developing art to be showcased in as many mediums our intricate planet earth can allow.</p>
     </div>
     <div class="skill-row">
       <img class="learning-img" src="images/spider-man_learning.jpeg" alt="spider-man-reading-and-learning-img-raj">
       <h3>School of Life</h3>
-      <p>My best skill is learning. I have been nicknamed human-encyclopedia, professor, and War Machine from Iron Man due to my childlike delights of acquiring knowledge, sharing it, and advocating quality persistence, respectively. </p>
+      <p class="knack">My best skill is learning. I have been nicknamed human-encyclopedia, professor, and War Machine from Marvel's Iron Man due to my childlike delights of acquiring knowledge, sharing it, and advocating quality persistence, respectively. </p>
     </div>
   </div>
   <hr>
